// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update tui-pin tag to div tuiPin migrates self-closed tui-pin: test.html 1`] = `
{
  "0. Before": "<tui-pin/>",
  "1. After": "<div tuiPin></div>",
}
`;

exports[`ng-update tui-pin tag to div tuiPin preserves attributes and content on tui-pin: test.html 1`] = `
{
  "0. Before": "<tui-pin appearance="primary" size="m"><span>1</span></tui-pin>",
  "1. After": "<div tuiPin appearance="primary" size="m"><span>1</span></div>",
}
`;

exports[`ng-update tui-pin tag to div tuiPin replaces tui-pin with div and tuiPin directive: test.html 1`] = `
{
  "0. Before": "<tui-pin></tui-pin>",
  "1. After": "<div tuiPin></div>",
}
`;
